fix: changed overflow from scroll to auto

--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ body {
     background-color: rgb(27, 35, 56);
     padding: 10px;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     font-size: 40px;
     margin-top: -100px;
 }
